Floor POST method created and documented on Swagger
